# sockets-kafka-client

./: CHANGELOG.md  cabal.project  sockets-kafka-client.cabal
src/: ResolveHostname.hs
src-channel-instantiation/Channel/: Error.hs  Socket.hs  SocketAlt.hs
src/Kafka/Unipartition/: Common.hs  Consumer.hs  Leader.hs
src/Socket/Stream/: Kafka.hs
