cabal-version: 3.4
name: sockets-kafka-client
version: 0.1.0.0
license: BSD-3-Clause
license-file: LICENSE
author: Andrew Martin
maintainer: amartin@layer3com.com
category: Data
build-type: Simple
extra-doc-files: CHANGELOG.md

library channel-instantiation
  exposed-modules:
    Channel.Error
    Channel.Socket
    Channel.SocketAlt
  build-depends:
    , base >=4.16.4.0
    , sockets >=0.6.1
    , text >=2.0
    , text-short >=0.1.5
    , kafka-interchange
    , byteslice >=0.2.8
    , primitive >=0.8
  hs-source-dirs: src-channel-instantiation
  default-language: GHC2021

library
  mixins:
    kafka-interchange:exchange-all
      (Client as Socket.Stream.Kafka.Exchange)
      requires
      (Channel as Channel.Socket),
    kafka-interchange:simple-exchange-all
      (Client as Socket.Stream.Kafka.ExchangeAlt)
      requires
      (Channel as Channel.SocketAlt, Error as Channel.Error)
  build-depends:
    , base >=4.16.4.0
    , sockets-kafka-client:channel-instantiation
    , kafka-interchange:exchange-all
    , kafka-interchange:simple-exchange-all
    , kafka-interchange
    , primitive >=0.8
    , text >=2.0
    , contiguous >=0.6.3
    , wide-word >=0.1.3
    , transformers >=0.5.6.2
    , sockets >=0.6.1
    , text-short >=0.1.5
    , posix-api >=0.4
    , byteslice >=0.2.10
    , ip >=1.7.6
    , byte-order >=0.1.3
    , run-st >=0.1.1
  hs-source-dirs: src
  other-modules:
    Kafka.Unipartition.Common
  reexported-modules:
    Channel.Error
  exposed-modules:
    ResolveHostname
    Socket.Stream.Kafka
    Kafka.Unipartition.Consumer
    Kafka.Unipartition.Leader
  default-language: GHC2021
